[package]
name = "void_probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtf_divider = { path = "../rtf_divider" }
rtf2pdf = { path = "../rtf2pdf" }
anyhow = "1.0.79"
crossbeam-channel = "0.5.11"
regex = "1.10.3"
lopdf = "0.32.0"
flate2 = "1.0.28"
serde = { version = "1", features = ["derive"] }
